Update .gitignore to exclude latest_emails.csv and previous_emails.json; enhance main.ipynb with email parsing functionality using OpenAI API

--- a/main.ipynb
+++ b/main.ipynb
@@ -312,6 +312,162 @@
     "# Print or use the list as needed\n",
     "print(email_strings)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: openai in /opt/anaconda3/lib/python3.8/site-packages (1.14.2)\n",
+      "Collecting openai\n",
+      "  Downloading openai-1.54.3-py3-none-any.whl.metadata (24 kB)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in /opt/anaconda3/lib/python3.8/site-packages (from openai) (3.5.0)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in /opt/anaconda3/lib/python3.8/site-packages (from openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in /opt/anaconda3/lib/python3.8/site-packages (from openai) (0.27.0)\n",
+      "Collecting jiter<1,>=0.4.0 (from openai)\n",
+      "  Downloading jiter-0.7.0-cp38-cp38-macosx_10_12_x86_64.whl.metadata (5.2 kB)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in /opt/anaconda3/lib/python3.8/site-packages (from openai) (1.10.2)\n",
+      "Requirement already satisfied: sniffio in /opt/anaconda3/lib/python3.8/site-packages (from openai) (1.2.0)\n",
+      "Requirement already satisfied: tqdm>4 in /opt/anaconda3/lib/python3.8/site-packages (from openai) (4.66.5)\n",
+      "Collecting typing-extensions<5,>=4.11 (from openai)\n",
+      "  Downloading typing_extensions-4.12.2-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Requirement already satisfied: idna>=2.8 in /opt/anaconda3/lib/python3.8/site-packages (from anyio<5,>=3.5.0->openai) (2.10)\n",
+      "Requirement already satisfied: certifi in /opt/anaconda3/lib/python3.8/site-packages (from httpx<1,>=0.23.0->openai) (2020.12.5)\n",
+      "Requirement already satisfied: httpcore==1.* in /opt/anaconda3/lib/python3.8/site-packages (from httpx<1,>=0.23.0->openai) (1.0.4)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /opt/anaconda3/lib/python3.8/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+      "Downloading openai-1.54.3-py3-none-any.whl (389 kB)\n",
+      "Downloading jiter-0.7.0-cp38-cp38-macosx_10_12_x86_64.whl (292 kB)\n",
+      "Downloading typing_extensions-4.12.2-py3-none-any.whl (37 kB)\n",
+      "\u001b[33mWARNING: Error parsing dependencies of jmespath: [Errno 2] No such file or directory: '/opt/anaconda3/lib/python3.8/site-packages/jmespath-0.10.0.dist-info/METADATA'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Error parsing dependencies of pyodbc: Invalid version: '4.0.0-unsupported'\u001b[0m\u001b[33m\n",
+      "\u001b[0mInstalling collected packages: typing-extensions, jiter, openai\n",
+      "  Attempting uninstall: typing-extensions\n",
+      "    Found existing installation: typing_extensions 4.10.0\n",
+      "    Uninstalling typing_extensions-4.10.0:\n",
+      "      Successfully uninstalled typing_extensions-4.10.0\n",
+      "  Attempting uninstall: openai\n",
+      "    Found existing installation: openai 1.14.2\n",
+      "    Uninstalling openai-1.14.2:\n",
+      "      Successfully uninstalled openai-1.14.2\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\u001b[31mERROR: Exception:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/anaconda3/lib/python3.8/site-packages/pip/_internal/cli/base_command.py\", line 105, in _run_wrapper\n",
+      "    status = _inner_run()\n",
+      "  File \"/opt/anaconda3/lib/python3.8/site-packages/pip/_internal/cli/base_command.py\", line 96, in _inner_run\n",
+      "    return self.run(options, args)\n",
+      "  File \"/opt/anaconda3/lib/python3.8/site-packages/pip/_internal/cli/req_command.py\", line 67, in wrapper\n",
+      "    return func(self, options, args)\n",
+      "  File \"/opt/anaconda3/lib/python3.8/site-packages/pip/_internal/commands/install.py\", line 483, in run\n",
+      "    installed_versions[distribution.canonical_name] = distribution.version\n",
+      "  File \"/opt/anaconda3/lib/python3.8/site-packages/pip/_internal/metadata/pkg_resources.py\", line 192, in version\n",
+      "    return parse_version(self._dist.version)\n",
+      "  File \"/opt/anaconda3/lib/python3.8/site-packages/pip/_vendor/packaging/version.py\", line 56, in parse\n",
+      "    return Version(version)\n",
+      "  File \"/opt/anaconda3/lib/python3.8/site-packages/pip/_vendor/packaging/version.py\", line 202, in __init__\n",
+      "    raise InvalidVersion(f\"Invalid version: '{version}'\")\n",
+      "pip._vendor.packaging.version.InvalidVersion: Invalid version: '4.0.0-unsupported'\u001b[0m\u001b[31m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install openai -U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "load_dotenv()  # Load environment variables from .env\n",
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "\n",
+    "import json\n",
+    "from textwrap import dedent\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "client = OpenAI(api_key=openai_api_key)\n",
+    "\n",
+    "MODEL = \"gpt-4o-mini\"\n",
+    "\n",
+    "email_parser_prompt = '''\n",
+    "    You are an email parser. Your task is to assess whether an email seems important and provide a 25-word summary of its contents.\n",
+    "    Label the email as \"Important\" or \"Not Important\" based on keywords like deadlines, meetings, urgent tasks, approvals, or action items.\n",
+    "    Then, summarize the key details and main point of the email in exactly 25 words.\n",
+    "'''\n",
+    "\n",
+    "def parse_email(email_content):\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=MODEL,\n",
+    "        messages=[\n",
+    "            {\n",
+    "                \"role\": \"system\", \n",
+    "                \"content\": dedent(email_parser_prompt)\n",
+    "            },\n",
+    "            {\n",
+    "                \"role\": \"user\", \n",
+    "                \"content\": email_content\n",
+    "            }\n",
+    "        ],\n",
+    "        response_format={\n",
+    "            \"type\": \"json_schema\",\n",
+    "            \"json_schema\": {\n",
+    "                \"name\": \"email_parsing\",\n",
+    "                \"schema\": {\n",
+    "                    \"type\": \"object\",\n",
+    "                    \"properties\": {\n",
+    "                        \"importance\": {\"type\": \"string\", \"enum\": [\"Important\", \"Not Important\"]},\n",
+    "                        \"summary\": {\"type\": \"string\"}\n",
+    "                    },\n",
+    "                    \"required\": [\"importance\", \"summary\"],\n",
+    "                    \"additionalProperties\": False\n",
+    "                },\n",
+    "                \"strict\": True\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    return response.choices[0].message\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatCompletionMessage(content='{\"importance\":\"Not Important\",\"summary\":\"Glovo offers a 50% discount on the next month\\'s subscription for Glovo Prime, promoting unlimited free shipping and various exclusive deals available for users.\"}', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_email(email_strings[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
